# surrealdb_poc

./: Cargo.toml  README.md
src/: .env  auth.rs  books.rs  error.rs  lib.rs  main.rs  todo.rs
