[package]
name = "surrealdb-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
dotenv = "0.15.0"

serde = { version = "1.0.209", features = ["derive"] }
surrealdb = { version = "2.0.4", features = ["kv-mem", "protocol-http"] }

thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
